fix alignments and copies

--- a/src/dapps/Staked/components/Stepper/Stepper.scss
+++ b/src/dapps/Staked/components/Stepper/Stepper.scss
@@ -217,11 +217,4 @@
 .what-is-eth2 {
   margin-top: 15px;
   text-align: center;
-  a {
-    font-weight: normal;
-  }
-
-  span {
-    font-weight: bold;
-  }
 }
