--- a/src/dapps/Staked/components/Stepper/steps/Upload/Upload.scss
+++ b/src/dapps/Staked/components/Stepper/steps/Upload/Upload.scss
@@ -75,6 +75,7 @@
     }
   }
   .address-container {
+    border-radius: 5px;
     background-color: $light-green-1;
     flex-direction: column;
     width: 60%;
